== Changelog

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog],
and this project tries to adhere to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

== Unreleased

=== added

=== changed

=== fixed

== 2.0.3 - 2021-11-11

=== added

* https://github.com/docToolchain/docToolchain/issues/681[#681 - Please reactivate single page manual on v2.0.x site]

=== fixed

2021-11-10::
* fix https://github.com/docToolchain/docToolchain/issues/693[#693 - on windows powershell, targetDir is set wrong]
* fix https://github.com/docToolchain/docToolchain/issues/695[#695 - generateSite: toc attributes]
2021-11-09::
* fix https://github.com/docToolchain/docToolchain/issues/690[#690 - previewSite: exception if folder does not exist]
2021-11-08::
* fix https://github.com/docToolchain/docToolchain/issues/687[#687 - wrong encoding of emojis]
* fix https://github.com/docToolchain/docToolchain/issues/688[#688 - htmlSanityCheck: config of sourceDir is wrong]
* fix https://github.com/docToolchain/docToolchain/issues/689[#689 - code highlight: css clash with blog post tags]
* fix https://github.com/docToolchain/docToolchain/issues/682[#682 - generateSite: copyImages uses the wrong target]


== 2.0.2 - 2021-10-19

=== added

2021-10-19::
* use :jbake-rightcolumnhtml: to add some html to the right column

=== changed

2021-10-19::
* Add https://github.com/docToolchain/docToolchain/issues/667[#667 - GH Actions Default Build]

2021-10-18::
* Fix https://github.com/docToolchain/docToolchain/issues/664[#664 - doctoolchain.org link and typos]

=== fixed

2021-10-19::
* fix example for gitRepoUrl in config
* fix projectRootDir
* fix status.png and siteTitle

2021-10-17::
* fix https://github.com/docToolchain/docToolchain/issues/660[#660 - generateSite: projectRootDir wrong]

2021-10-11::